--- a/app/src/main/res/drawable/outline_red.xml
+++ b/app/src/main/res/drawable/outline_red.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <solid android:color="@color/colorWhite" />
     <corners android:radius="25dp" />
-    <stroke android:width="1dp" android:color="#F0655C"/>
+    <stroke android:width="1dp" android:color="@color/colorAccent"/>
 </shape>
