--- a/app/src/main/res/layout/fragment_add_route_map.xml
+++ b/app/src/main/res/layout/fragment_add_route_map.xml
@@ -113,7 +113,7 @@
                 android:onClick="@{mapSearchfrag::onStartClick}"
                 android:singleLine="true"
                 android:text="출발지를 입력해주세요."
-                android:textColor="#979797"
+                android:textColor="@color/colorTextGray"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@id/iv_start"
                 app:layout_constraintEnd_toEndOf="@id/layout_location"
@@ -154,7 +154,7 @@
                 android:onClick="@{mapSearchfrag::onEndClick}"
                 android:singleLine="true"
                 android:text="도착지를 입력해주세요."
-                android:textColor="#979797"
+                android:textColor="@color/colorTextGray"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@id/iv_end"
                 app:layout_constraintEnd_toEndOf="@id/tv_start"
