--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -46,7 +46,7 @@
             android:paddingEnd="5dp"
             android:paddingBottom="9dp"
             android:text="@string/tvSelLocal"
-            android:textColor="#979797"
+            android:textColor="@color/colorTextGray"
             android:textSize="13sp"
             android:onClick="@{mainfrag::onSelLocalClick}"
             android:clickable="true"
