--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,8 +12,9 @@
         <item name="android:paddingTop">14dp</item>
         <item name="android:paddingBottom">14dp</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">#979797</item>
+        <item name="android:textColor">@color/colorTextGray</item>
     </style>
+
     <style name="EtLoginStyle">
         <item name="android:layout_height">48dp</item>
         <item name="android:layout_width">0dp</item>
@@ -21,8 +22,8 @@
         <item name="android:layout_marginEnd">18dp</item>
         <item name="android:paddingStart">24dp</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">#979797</item>
-        <item name="android:textColorHint">#979797</item>
+        <item name="android:textColor">@color/colorTextGray</item>
+        <item name="android:textColorHint">@color/colorTextGray</item>
         <item name="android:background">@drawable/outline_gray_cf</item>
     </style>
 
@@ -39,7 +40,7 @@
         <item name="android:layout_height">48dp</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">#979797</item>
+        <item name="android:textColor">@color/colorTextGray</item>
     </style>
 
     <style name="EtAddRouteStyle">
@@ -64,6 +65,29 @@
         <item name="android:maxLines">1</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">#535353</item>
+    </style>
+
+    <style name="tvToolbarCategory">
+        <item name="android:layout_height">44dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:paddingStart">24dp</item>
+        <item name="android:paddingTop">21dp</item>
+        <item name="android:textSize">11sp</item>
+        <item name="notoTextStyle">medium</item>
+        <item name="android:textColor">#818181</item>
+    </style>
+
+    <style name="tvToolbarComponent">
+        <item name="android:layout_height">31dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:paddingStart">48dp</item>
+        <item name="android:paddingTop">6dp</item>
+        <item name="android:textSize">13sp</item>
+        <item name="notoTextStyle">regular</item>
+        <item name="android:background">@drawable/selectable_item_background</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:textColor">@color/colorBlack</item>
     </style>
 
     <style name="SpinnerTimePickerDialogTheme" parent="Theme.AppCompat.Light.Dialog">
