--- a/app/src/main/res/layout/fragment_intro_base.xml
+++ b/app/src/main/res/layout/fragment_intro_base.xml
@@ -30,14 +30,14 @@
             android:layout_height="17dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="24dp"
-            android:background="#00FFFFFF"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:onClick="@{intro::onLaterClick}"
             android:text="@string/bt_intro_later"
             android:textColor="#6d7278"
             android:textSize="12sp"
-            app:notoTextStyle="regular"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:onClick="@{intro::onLaterClick}"/>
+            app:notoTextStyle="regular" />
 
         <RelativeLayout
             android:id="@+id/indicator_view"
