--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -78,13 +78,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="18dp"
             android:layout_marginTop="13dp"
-            android:text="비밀번호찾기"
-            android:textSize="11sp"
-            android:textColor="#646464"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:onClick="@{LoginFrag::OnFindPassClick}"
+            android:text="비밀번호찾기"
+            android:textColor="#646464"
+            android:textSize="11sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/bt_login"
-            app:layout_constraintTop_toBottomOf="@id/bt_login"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/bt_login" />
         <View
             android:id="@+id/view1"
             android:layout_width="1dp"
@@ -100,13 +101,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="18dp"
-            android:text="회원가입"
-            android:textSize="11sp"
-            android:textColor="#646464"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:onClick="@{LoginFrag::OnRegisterClick}"
+            android:text="회원가입"
+            android:textColor="#646464"
+            android:textSize="11sp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_passFind"
             app:layout_constraintEnd_toEndOf="@id/bt_login"
-            app:layout_constraintTop_toTopOf="@id/tv_passFind"
-            app:layout_constraintBottom_toBottomOf="@id/tv_passFind"/>
+            app:layout_constraintTop_toTopOf="@id/tv_passFind" />
 
         <com.thustop_00.widgets.NotoButton
             style="@style/btStyle"
