--- a/app/src/main/res/layout/fragment_request_town_service.xml
+++ b/app/src/main/res/layout/fragment_request_town_service.xml
@@ -45,25 +45,30 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_1"/>
+
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_townSel"
+            android:id="@+id/cl_townSel"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:background="@drawable/outline_green"
-            android:paddingEnd="50dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="@{RequestTownFrag::onRegionSelectClick}"
             android:paddingStart="50dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_2"
+            android:paddingEnd="50dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/tv_2">
+
             <com.thustop_00.widgets.NotoTextView
                 android:id="@+id/tv_townSel"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="@string/tv_townSel"
                 android:gravity="center"
-                app:layout_constraintTop_toTopOf="parent"
+                android:text="@string/tv_townSel"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.thustop_00.widgets.NotoCheckBox
@@ -72,7 +77,7 @@
             android:layout_height="wrap_content"
             android:text="@string/cb_town_message"
             android:button="@drawable/checkbox_round_sel"
-            app:layout_constraintTop_toBottomOf="@id/layout_townSel"
+            app:layout_constraintTop_toBottomOf="@id/cl_townSel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
         <com.thustop_00.widgets.NotoEditText
