--- a/app/src/main/res/layout/item_region.xml
+++ b/app/src/main/res/layout/item_region.xml
@@ -3,26 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:foreground="@drawable/selectable_item_background">
+    android:layout_height="wrap_content">
 
 
     <com.thustop_00.widgets.NotoTextView
-        android:id="@+id/tv_pred_name"
+        android:id="@+id/tv_region"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:paddingStart="15dp"
-        android:paddingEnd="15dp"
         android:gravity="center"
+        android:paddingStart="15dp"
+        android:paddingTop="10dp"
+        android:paddingEnd="15dp"
+        android:paddingBottom="10dp"
         android:textColor=" #535353"
         android:textSize="14sp"
-        app:notoTextStyle="regular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:notoTextStyle="regular"
         tools:text="서울시" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
