--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -12,7 +12,7 @@
         <item>통신사</item>
     </string-array>
 
-    <string-array name="city">
+    <string-array name="state">
         <item>서울</item>
         <item>경기</item>
         <item>인천</item>
