--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -78,10 +78,10 @@
     </style>
 
     <style name="tvToolbarComponent">
-        <item name="android:layout_height">31dp</item>
+        <item name="android:layout_height">42dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:paddingStart">48dp</item>
-        <item name="android:paddingTop">6dp</item>
+        <item name="android:gravity">center_vertical</item>
         <item name="android:textSize">13sp</item>
         <item name="notoTextStyle">regular</item>
         <item name="android:background">@drawable/selectable_item_background</item>
